Add monobank component

--- a/src/donate-monitor/src/app/app.component.html
+++ b/src/donate-monitor/src/app/app.component.html
@@ -1,14 +1,1 @@
-<mat-card class="mono-card">
-  <mat-card-subtitle>Monobank API key</mat-card-subtitle>
-  <mat-card-content>
-    Copy your Monobank API key from <a href="https://api.monobank.ua/" target="_blank">https://api.monobank.ua/</a>.
-    Provided API key will be stored on your computer and will be used to perform API request from your computer to Monobank servers.
-  </mat-card-content>
-  <mat-form-field class="mono-api-key" appearance="fill">
-    <mat-label>API key</mat-label>
-    <input matInput>
-  </mat-form-field>
-  <mat-card-actions align="end">
-    <button mat-button color="primary">RUN</button>
-  </mat-card-actions>
-</mat-card>
+<app-monobank></app-monobank>
