--- a/src/donate-monitor/src/app/monobank/monobank.component.html
+++ b/src/donate-monitor/src/app/monobank/monobank.component.html
@@ -4,7 +4,7 @@
     Copy your Monobank API key from <a href="https://api.monobank.ua/" target="_blank">https://api.monobank.ua/</a>.
     Provided API key will be stored on your computer and will be used to perform API request from your computer to Monobank servers.
   </mat-card-content>
-  <mat-form-field class="mono-api-key" appearance="fill">
+  <mat-form-field class="mono-wide-input" appearance="fill">
     <mat-label>API key</mat-label>
     <input matInput [formControl]="token">
   </mat-form-field>
@@ -14,15 +14,16 @@
 </mat-card>
 
 <mat-card class="mono-card" *ngIf="clientInfo">
-  <mat-card-title>Account owner: {{ clientInfo.name }}</mat-card-title>
-
-  <mat-form-field appearance="fill">
+  <mat-card-subtitle>Account owner: {{ clientInfo.name }}</mat-card-subtitle>
+  <mat-form-field class="mono-wide-input" appearance="fill">
     <mat-label>Select card or jar</mat-label>
     <mat-select [(ngModel)]="selectedEntity" name="entity">
-      <mat-option *ngFor="let entity of cardsAndJars" [value]="entity.value">
-        {{entity.toString()}}
+      <mat-option *ngFor="let entity of clientInfo.cardsAndJars()" [value]="entity">
+        {{entity.value()}}
       </mat-option>
     </mat-select>
   </mat-form-field>
-
+  <mat-card-actions align="end">
+    <button mat-button color="primary" (click)="onSelectAccount()">FETCH FRANSACTIONS</button>
+  </mat-card-actions>
 </mat-card>
