--- a/src/donate-monitor/src/app/monobank/monobank.component.html
+++ b/src/donate-monitor/src/app/monobank/monobank.component.html
@@ -9,7 +9,7 @@
     <input matInput [formControl]="token">
   </mat-form-field>
   <mat-card-actions align="end">
-    <button mat-button color="primary" (click)="onRun()">FETCH ACCOUNT INFO</button>
+    <button mat-button color="primary" (click)="onFetchAcountInfo()">FETCH ACCOUNT INFO</button>
   </mat-card-actions>
 </mat-card>
 
