Add transactions API

--- a/src/donate-monitor/src/app/monobank/monobank.component.html
+++ b/src/donate-monitor/src/app/monobank/monobank.component.html
@@ -24,6 +24,6 @@
     </mat-select>
   </mat-form-field>
   <mat-card-actions align="end">
-    <button mat-button color="primary" (click)="onSelectAccount()">FETCH FRANSACTIONS</button>
+    <button mat-button color="primary" (click)="onFetchTransactions()">FETCH FRANSACTIONS</button>
   </mat-card-actions>
 </mat-card>
