--- a/src/donate-monitor/src/app/monobank/monobank.component.html
+++ b/src/donate-monitor/src/app/monobank/monobank.component.html
@@ -46,33 +46,38 @@
 </mat-card>
 
 <mat-card class="mono-card" *ngIf="transactions.length > 0">
-  <table mat-table [dataSource]="transactions" class="mat-elevation-z8 mono-transaction-table">
+  <mat-card-content>
+    <mat-checkbox [(ngModel)]="showTransactionsDescription">Show transactions description</mat-checkbox>
+  </mat-card-content>
 
-    <!-- Date Column -->
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef> Date </th>
-      <td mat-cell *matCellDef="let element" class="mono-fixed-column"> {{element.getDate()}} </td>
-    </ng-container>
+  <mat-card-content>
+    <table mat-table [dataSource]="transactions" class="mat-elevation-z8 mono-transaction-table">
+      <!-- Date Column -->
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Date </th>
+        <td mat-cell *matCellDef="let element" class="mono-fixed-column"> {{element.getDate()}} </td>
+      </ng-container>
 
-    <!-- Time Column -->
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef> Time </th>
-      <td mat-cell *matCellDef="let element" class="mono-fixed-column"> {{element.getTime()}} </td>
-    </ng-container>
-  
-    <!-- Amount Column -->
-    <ng-container matColumnDef="amount">
-      <th mat-header-cell *matHeaderCellDef> Amount </th>
-      <td mat-cell *matCellDef="let element" class="mono-fixed-column"> {{element.getAmount()}} </td>
-    </ng-container>
-  
-    <!-- Description Column -->
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="transactionsColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: transactionsColumns;"></tr>
-  </table>
+      <!-- Time Column -->
+      <ng-container matColumnDef="time">
+        <th mat-header-cell *matHeaderCellDef> Time </th>
+        <td mat-cell *matCellDef="let element" class="mono-fixed-column"> {{element.getTime()}} </td>
+      </ng-container>
+
+      <!-- Amount Column -->
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef> Amount </th>
+        <td mat-cell *matCellDef="let element" class="mono-fixed-column"> {{element.getAmount()}} </td>
+      </ng-container>
+
+      <!-- Description Column -->
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef> Description </th>
+        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="transactionsColumns()"></tr>
+      <tr mat-row *matRowDef="let row; columns: transactionsColumns();"></tr>
+    </table>
+  </mat-card-content>
 </mat-card>
